@@ -1469,15 +1469,15 @@ document_helper_configuration:
               VERSION: 5.1.0
         pdbx_core:
             - NAME: pdbx_core_entity
-              VERSION: 6.4.1
+              VERSION: 6.4.4
             - NAME: pdbx_core_entry
-              VERSION: 6.4.1
+              VERSION: 6.4.3
             - NAME: pdbx_core_assembly
-              VERSION: 6.4.0
+              VERSION: 6.4.1
             - NAME: pdbx_core_entity_instance
-              VERSION: 6.4.0
+              VERSION: 6.4.2
             - NAME: pdbx_core_entity_instance_validation
-              VERSION: 6.4.0
+              VERSION: 6.4.2
             #- NAME: pdbx_core_entity_monomer
             #  VERSION: 5.1.0
         bird:
@@ -2627,14 +2627,17 @@ document_helper_configuration:
         pdbx_core_entry:
             - citation
         pdbx_core_entity:
+            - entity
+            - rcsb_entity_host_organism
+            - rcsb_entity_source_organism
             - rcsb_polymer_entity_feature
-            - rcsb_polymer_entity_align
+            #- rcsb_polymer_entity_align
             - rcsb_entity_container_identifiers
         pdbx_core_entity_instance:
             - rcsb_polymer_instance_feature
             - rcsb_polymer_instance_feature_summary
         pdbx_core_entity_instance_validation:
-            - rcsb_polymer_instance_validation_feature
+            #- rcsb_polymer_instance_validation_feature
             - rcsb_polymer_instance_validation_feature_summary
     #
     collection_attribute_search_contexts:
@@ -2692,8 +2695,8 @@ document_helper_configuration:
           - rcsb_entry_container_identifiers.rcsb_id
           - rcsb_entry_info.experimental_method
           - rcsb_entry_info.polymer_composition
-          - rcsb_entry_info.resolution_combined
           - rcsb_entry_info.selected_polymer_entity_types
+          - rcsb_entry_info.software_programs_combined
           - symmetry.cell_setting
           - symmetry.pdbx_full_space_group_name_H-M
           - symmetry.space_group_name_H-M
@@ -2751,6 +2754,9 @@ document_helper_configuration:
           - citation.book_title
           - citation.rcsb_authors
           - citation.title
+          - diffrn_detector.type
+          - diffrn_source.pdbx_synchrotron_beamline
+          - diffrn_source.pdbx_synchrotron_site
           - diffrn_detector.details
           - diffrn_detector.detector
           - diffrn_radiation.collimation
@@ -2785,6 +2791,13 @@ document_helper_configuration:
           - em_vitrification.cryogen_name
           - em_vitrification.instrument
           - em_vitrification.method
+          - entity_src_gen.gene_src_common_name
+          - entity_src_gen.pdbx_gene_src_scientific_name,
+          - entity_src_nat.common_name
+          - entity_src_nat.pdbx_organism_scientific
+          - exptl.method
+          - pdbx_audit_support.country
+          - pdbx_audit_support.funding_organization
           - exptl.details
           - pdbx_deposit_group.group_description
           - pdbx_deposit_group.group_title
@@ -2801,6 +2814,7 @@ document_helper_configuration:
           - pdbx_nmr_software.name
           - pdbx_nmr_spectrometer.manufacturer
           - pdbx_nmr_spectrometer.model
+          - pdbx_SG_project.full_name_of_center
           - pdbx_serial_crystallography_measurement.collimation
           - pdbx_serial_crystallography_sample_delivery_fixed_target.description
           - pdbx_serial_crystallography_sample_delivery_fixed_target.details
@@ -2828,7 +2842,6 @@ document_helper_configuration:
           - rcsb_entry_info.polymer_composition
           - rcsb_entry_info.selected_polymer_entity_types
           - rcsb_entry_info.software_programs_combined
-          - rcsb_entry_info.software_programs_combined
           #
           - refine.details
           - refine.pdbx_method_to_determine_struct
@@ -2852,6 +2865,7 @@ document_helper_configuration:
           - rcsb_entity_source_organism.ncbi_scientific_name
         - SEARCH_TYPE: exact-match
           ATTRIBUTE_NAMES:
+          - entity.type
           - entity_poly.rcsb_entity_polymer_type
           - entity.rcsb_ec_lineage_id
           - entity.rcsb_ec_lineage_name
@@ -2930,6 +2944,28 @@ document_helper_configuration:
           - entity.rcsb_enzyme_class_combined_ec
           - entity.rcsb_macromolecular_names_combined_name
           - rcsb_polymer_entity_feature.description
+          #
+          - rcsb_entity_host_organism.common_name
+          - rcsb_entity_host_organism.ncbi_common_names
+          - rcsb_entity_host_organism.ncbi_parent_scientific_name
+          - rcsb_entity_host_organism.ncbi_scientific_name
+          - rcsb_entity_host_organism.scientific_name
+          - rcsb_entity_host_organism.taxonomy_lineage_id
+          - rcsb_entity_host_organism.taxonomy_lineage_name
+          - rcsb_entity_source_organism.common_name
+          - rcsb_entity_source_organism.ncbi_common_names
+          - rcsb_entity_source_organism.ncbi_parent_scientific_name
+          - rcsb_entity_source_organism.ncbi_scientific_name
+          - rcsb_entity_source_organism.scientific_name
+          - rcsb_entity_source_organism.taxonomy_lineage_id
+          - rcsb_entity_source_organism.taxonomy_lineage_name
+          - rcsb_enzyme_class_combined.ec
+          - rcsb_polymer_entity_feature.feature_class_lineage_id
+          - rcsb_polymer_entity_feature.feature_class_lineage_name
+          - rcsb_polymer_entity_feature.name
+          - rcsb_polymer_entity_feature.feature_id
+          - rcsb_polymer_entity_feature.type
+          - rcsb_polymer_entity_feature_summary.type
       #
       pdbx_core_entity_instance:
         - SEARCH_TYPE: exact-match
@@ -2949,27 +2985,25 @@ document_helper_configuration:
           - rcsb_polymer_instance_feature_summary.coverage
         - SEARCH_TYPE: full-text
           ATTRIBUTE_NAMES:
+          - rcsb_polymer_instance_feature.name
+          - rcsb_polymer_instance_feature.feature_class_lineage_name
           - rcsb_polymer_instance_feature.description
       #
       pdbx_core_entity_instance_validation:
         - SEARCH_TYPE: exact-match
           ATTRIBUTE_NAMES:
-          - rcsb_polymer_instance_validation_feature.feature_class_lineage_id
-          - rcsb_polymer_instance_validation_feature.feature_class_lineage_name
-          - rcsb_polymer_instance_validation_feature.name
+          # - rcsb_polymer_instance_validation_feature.feature_class_lineage_id
+          # - rcsb_polymer_instance_validation_feature.feature_class_lineage_name
+          # - rcsb_polymer_instance_validation_feature.name
           - rcsb_entity_instance_validation_container_identifiers.rcsb_id
-          - rcsb_entity_instance_validation_container_identifiers.feature_id
-          - rcsb_entity_instance_validation_container_identifiers.type
           - rcsb_polymer_instance_validation_feature_summary.type
         - SEARCH_TYPE: default-match
           ATTRIBUTE_NAMES:
-          - rcsb_polymer_instance_validation_feature.feature_ranges_value
-          - rcsb_polymer_instance_validation_feature.feature_positions_value
           - rcsb_polymer_instance_validation_feature_summary.count
           - rcsb_polymer_instance_validation_feature_summary.coverage
-        - SEARCH_TYPE: full-text
-          ATTRIBUTE_NAMES:
-          - rcsb_polymer_instance_validation_feature.description
+        #- SEARCH_TYPE: full-text
+        #  ATTRIBUTE_NAMES:
+        #  - rcsb_polymer_instance_validation_feature.description
       #
       pdbx_core_assembly:
         - SEARCH_TYPE: full-text
@@ -2997,7 +3031,7 @@ document_helper_configuration:
           - chem_comp.formula_weight
         - SEARCH_TYPE: full-text
           ATTRIBUTE_NAMES:
-          - chem_comp.formula
+          # - chem_comp.formula
           - chem_comp.name
           - pdbx_reference_molecule_family.name
           - pdbx_reference_molecule_related_structures.db_code
@@ -3007,8 +3041,8 @@ document_helper_configuration:
           - pdbx_reference_molecule.name
           - pdbx_reference_molecule.type
           - rcsb_chem_comp_container_identifiers.drugbank_id
-          - rcsb_chem_comp_descriptor.InChI
-          - rcsb_chem_comp_descriptor.InChIKey
+          #- rcsb_chem_comp_descriptor.InChI
+          #- rcsb_chem_comp_descriptor.InChIKey
           - rcsb_chem_comp_related.resource_accession_code
           - rcsb_chem_comp_synonyms.name
           - rcsb_chem_comp_target.name
